manifests/base/sec/net/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: chaostoolkit-run
spec:
  podSelector:
    matchLabels:
      app: chaostoolkit
  policyTypes:
  - Ingress
  - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-chaostoolkit-to-cluster-dns
  namespace: chaostoolkit-run
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: chaostoolkit
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-chaostoolkit-to-secured-external
  namespace: chaostoolkit-run
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: chaostoolkit
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - port: 443
        protocol: TCP
